backend-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: backend-deployment
  labels:
    app: backend
  namespace: annika
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pods
      labels: 
        app: backend
    spec:
      containers:
        - name: backend
          image: annika1712/eks-basic3tier-backend:latest
          ports:
            - containerPort: 80
