frontend-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend-deployment
  labels:
    app: frontend
  namespace: annika
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pods
      labels: 
        app: frontend
    spec:
      volumes:
        - name: config
          configMap:
            name: frontend-configmap
            items: 
              - key: config.json
                path: config.json
      containers:
        - name: frontend
          image: annika1712/eks-basic3tier-frontend:latest
          ports:
            - containerPort: 80
          volumeMounts: 
            - mountPath: /usr/share/nginx/html/configs
              name: config
