backend-loadbalancer.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: backend-nodeport
  labels:
    app: backend
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - port: 82
      targetPort: 80
