database-clusterip.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: basic3tier
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
