frontend-loadbalancer.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: frontend-lb
  labels:
    app: frontend
  namespace: annika
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
