nginx-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: annika
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-lb
                port:
                  number: 80
          - path: /api/user
            pathType: Prefix
            backend: 
              service:
                name: backend-lb
                port: 
                  number: 80
